icons alignment fix

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -40,7 +40,3 @@ mat-sidenav {
         overflow-x: hidden;
     }
 }
-
-.material-icons {
-    vertical-align: middle;
-}
